# frugen

./: .gitignore  CMakeLists.txt  LICENSE  README.md  example.json  fatal.h  fru.c  fru.h  fru_reader.c  fru_reader.h  frugen.c  smbios.h
.github/workflows/: ci.yml
include/: fru.h
libs/: CMakeLists.txt  fru.c
src/: CMakeLists.txt  frugen.c
